# ghostty-rs

./: .gitmodules  Cargo.toml  README.md
src/: config.rs  ghostty.rs  lib.rs  tests.rs
tests/: cli.rs
