[package]
name = "ghostty"
description = "Cross-platform terminal base"
version = "0.2.0"
license = "MIT"
authors = [
    "rsahwe <rsahwe@gmx.net>",
]
readme = "README.md"
resolver = "3"
edition = "2024"
exclude = [
    'ghostty',
]

[dependencies]
ghostty-sys = { version = "0.1.1", path = "../ghostty-sys" }
